--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -17,8 +17,10 @@
     "build": "brunch build --production"
   },
   "dependencies": {
+    "backbone": "^1.3.3",
     "backbone.marionette": "^2.4.7",
-    "jquery": "^2.2.4"
+    "jquery": "^2.2.4",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "auto-reload-brunch": "^2.0.0",
