--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -30,6 +30,7 @@
     "coffeelint-brunch": "^2.0.0",
     "css-brunch": "^2.0.0",
     "javascript-brunch": "^2.0.0",
+    "node-sass": "^3.8.0",
     "postcss-brunch": "^0.5.0",
     "sass-brunch": "^2.6.3",
     "uglify-js-brunch": "^2.0.0"
