--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -20,6 +20,7 @@
     "backbone": "^1.3.3",
     "backbone.marionette": "^2.4.7",
     "jquery": "^2.2.4",
+    "moment": "^2.14.1",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
