--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "backbone": "^1.3.3",
     "backbone.marionette": "^2.4.7",
+    "font-awesome": "^4.6.3",
     "jquery": "^2.2.4",
     "moment": "^2.14.1",
     "underscore": "^1.8.3"
@@ -29,6 +30,7 @@
     "clean-css-brunch": "^2.0.0",
     "coffee-script-brunch": "^2.0.0",
     "coffeelint-brunch": "^2.0.0",
+    "copycat-brunch": "^1.1.0",
     "css-brunch": "^2.0.0",
     "javascript-brunch": "^2.0.0",
     "node-sass": "^3.8.0",
