--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -19,8 +19,8 @@
   "dependencies": {
     "backbone": "^1.3.3",
     "backbone.marionette": "^2.4.7",
-    "font-awesome": "^4.6.3",
     "jquery": "^2.2.4",
+    "material-design-icons": "^2.2.3",
     "moment": "^2.14.1",
     "underscore": "^1.8.3"
   },
